<?xml version="1.0"?>
<package format="2">
  <name>ranger_bot</name>

  <version>1.3.2</version>

  <description>
    A Planning module for a RangerRobot
  </description>

  <license>Apache 2.0</license>

  <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="kkjong@robotis.com">Gilbert</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <depend>nav_core</depend>

  <exec_depend>gazebo</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <!-- <exec_depend>nav_core</exec_depend> -->
  

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <nav_core plugin="${prefix}/global_planner_plugin.xml" />
  </export>

</package>
