<?xml version="1.0"?>
<package format="2">
  <name>ranger_bot</name>

  <version>1.3.2</version>

  <description>
    A Planning module for a RangerRobot
  </description>

  <license>Apache 2.0</license>

  <author email="kavvuripavankumar@gmail.com">Pavan</author>

  <maintainer email="kavvuripavankumar@gmail.com">Pavan</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <depend>nav_core</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>pluginlib</depend>

  <exec_depend>gazebo</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <!-- <exec_depend>dynamic_reconfigure</exec_depend> -->
  <!-- <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend> -->

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <!-- <nav_core plugin="${prefix}/config/plugins/RAstar_plugin.xml" /> -->
    <nav_core plugin="${prefix}/config/plugins/dummy_local_planner.xml" />
    <!-- <nav_core plugin="${prefix}/config/plugins/pure_pursuit_plugin.xml"/> -->
  </export>

</package>
